--- a/components/home/SectionSelector/SectionSelector.module.scss
+++ b/components/home/SectionSelector/SectionSelector.module.scss
@@ -6,36 +6,21 @@
     display: grid;
     grid-template-areas: 'nombre-docente imagen-docente texto-docente';
     grid-template-columns: calc(100% / 3) calc(100% / 3) calc(100% / 3);    
-    margin-bottom: calc(85px + (350 - 85) * ((100vw - 1200px) / (3840 - 1200)));           
-    @media screen and (max-width: 1025px){ 
-        grid-template-areas: 'imagen-docente' 'nombre-docente' 'texto-docente'; 
-        grid-template-columns: 100% 100% 100%;   
-        height: auto; 
-        margin-bottom: calc(40px + (80 - 40) * ((100vw - 300px) / (1024 - 300)));
-    } 
+    margin-bottom: calc(85px + (350 - 85) * ((100vw - 1200px) / (3840 - 1200)));   
+    @media screen and (max-width: 1024px){
+        width: 100%;
+        height: auto;
+        display: block;
+        margin-bottom: calc(50px + (150 - 50) * ((100vw - 300px) / (1024 - 300)));
+    }        
 
     .cta_title{
         grid-area: nombre-docente;
         margin-top: calc(75px + (200 - 75) * ((100vw - 1200px) / (3840 - 1200))); 
-        @media screen and (max-width: 1025px){  
-            margin-bottom: calc(12px + (22 - 12) * ((100vw - 300px) / (1200 - 300)));
-            width: 100%;
-            overflow: hidden;
-            &::-webkit-scrollbar {
-                display: none;
-            }
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }  
+  
         .wrapper{                     
             position: relative; 
-            transition: all 0.6s ease;                    
-            @media screen and (max-width: 1025px){ 
-                display: inline-block;
-                white-space: nowrap; 
-                padding-bottom: 6px;                       
-            }
-   
+            transition: all 0.6s ease;                   
                  
             button{
                 background-color: transparent;
@@ -50,20 +35,7 @@
                 margin: 0 0 calc(12px + (34 - 12) * ((100vw - 1200px) / (3840 - 1200))) 0;
                 cursor: pointer;
                 transition: all 0.3s ease;
-                @media screen and (max-width: 1025px){  
-                    font-size: calc(19px + (40 - 19) * ((100vw - 300px) / (1200 - 300)));
-                    font-weight: 500;  
-                    margin:
-                    0
-                    calc(10px + (30 - 10) * ((100vw - 300px) / (1200 - 300)));
-                    ; 
-                    padding:
-                    0
-                    calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300)))
-                    calc(3px + (4 - 3) * ((100vw - 300px) / (1200 - 300)))
-                    calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300)))
-                    ;
-                }
+
                 span{
                     position: absolute;
                     width: calc(6px + (16 - 6) * ((100vw - 1200px) / (3840 - 1200)));
@@ -72,48 +44,24 @@
                     left: 1%;
                     top: 0;
                     transition: all 0.3s ease;
-                    @media screen and (max-width: 1025px){ 
-                        height: 4px;
-                        width: 0%;
-                        bottom: -4px;
-                        top: initial;
-                    }
                 }
+
                 &:hover{
                     padding-left: calc(20px + (56 - 20) * ((100vw - 1200px) / (3840 - 1200)));
                     transition: all 0.3s ease;
-                    @media screen and (max-width: 1025px){ 
-                        padding: 0 calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300))) calc(3px + (4 - 3) * ((100vw - 300px) / (1200 - 300))) calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300)));
-                    }
                     span{                            
                         height: 100%;
                         background-color: $gray-4;
                     }
                 }
+
                 &.active{
                     color: $deep-blue; 
                     padding-left: calc(20px + (56 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-                    @media screen and (max-width: 1025px){                                 
-                        margin:
-                        0
-                        calc(10px + (30 - 10) * ((100vw - 300px) / (1200 - 300)));
-                        ;
-                        padding:
-                        0
-                        calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300)))
-                        calc(3px + (4 - 3) * ((100vw - 300px) / (1200 - 300)))
-                        calc(2px + (3 - 2) * ((100vw - 300px) / (1200 - 300)))
-                        ;
-                    }
+
                     span{
                         height: 100%;
                         background-color: $yellow-1;
-                        @media screen and (max-width: 1025px){ 
-                            height: calc(6.5px + (18.6 - 6.5) * ((100vw - 1200px) / (3840 - 1200)));
-                            width: 20%;
-                            bottom: -4px;
-                            top: initial;
-                        }
                     }
                 }                        
             }
@@ -123,13 +71,7 @@
     .imagen_docente{
         position: relative;
         grid-area: imagen-docente;
-        //top: calc(-176px + (-338 - -176) * ((100vw - 1200px) / (3840 - 1200)));
         overflow: hidden;
-        @media screen and (max-width: 1025px){ 
-            height: calc(200px + (580 - 200) * ((100vw - 300px) / (1200 - 300)));
-            margin-bottom: calc(28px + (75 - 28) * ((100vw - 300px) / (1200 - 300)));
-            top: 0;
-        }
         
         img{
             position: absolute;
@@ -144,10 +86,6 @@
             transform: translate(0px, 20px);
             &.visible{
                 display: inline;
-            }
-            @media screen and (max-width: 1025px){ 
-                height: 100%;
-                width: auto;
             }            
         }
 
@@ -161,10 +99,6 @@
             bottom: 0;
             margin: 0 auto;
             z-index: 1;  
-            @media screen and (max-width: 1025px){ 
-                width: calc(150px + (480 - 150) * ((100vw - 300px) / (1200 - 300)));
-                height: calc(150px + (480 - 150) * ((100vw - 300px) / (1200 - 300)));
-            }
         }
     }
 
@@ -173,10 +107,7 @@
         margin-top: calc(75px + (200 - 75) * ((100vw - 1200px) / (3840 - 1200))); 
         padding-left: calc(14px + (54 - 14) * ((100vw - 1200px) / (3840 - 1200)));
         padding-top: calc(3px + (12 - 3) * ((100vw - 1200px) / (3840 - 1200)));
-        @media screen and (max-width: 1025px){  
-            width: 80vw;
-            margin: 0 auto;
-        }
+        
         p{
             @include font-level-4;
             line-height: 144%;
@@ -187,20 +118,69 @@
                 font-weight: 400;
                 border-bottom: $line-2 solid $yellow-1;
             }
-            @media screen and (max-width: 1025px){  
-                font-size: calc(11px + (20 - 11) * ((100vw - 300px) / (1025 - 300)));                           
-            }
         }
         button{
             @include btn-ver-mas;
-            @media screen and (max-width: 1025px){  
-                font-size: calc(11px + (20 - 11) * ((100vw - 300px) / (1025 - 300)));                           
-            }
         }
     }
 }
 
-.slide_docente {
+.slide_mobile{
+    width: 100vw; 
+
+    .wrapper{
+        @include container-width-1;
+        
+        .img_docente{
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            width: calc(160px + (580 - 160) * ((100vw - 300px) / (1024 - 300))); 
+            height: calc(200px + (700 - 200) * ((100vw - 300px) / (1024 - 300))); 
+            margin-bottom: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300)));
+            img{
+                z-index: 2;
+                width: auto;
+                height: 100%;
+            } 
+            span{
+                position: absolute;
+                z-index: 1;
+                background-color: $gray-6;
+                width: 100%; 
+                height: calc(155px + (550 - 155) * ((100vw - 300px) / (1024 - 300))); 
+            }
+        }
+    
+        h4{
+            @include font-level-2;    
+            font-weight: 400;
+            line-height: 120%; 
+            color: $deep-blue;
+            margin-bottom: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300)));
+        }
+    
+        p{
+            @include font-level-4;
+            line-height: 144%;
+            color: $deep-blue;
+            margin-top: 0;
+            margin-bottom: calc(30px + (85 - 30) * ((100vw - 300px) / (1024 - 300)));
+            strong{
+                font-weight: 400;
+                border-bottom: $line-2 solid $yellow-1;
+            }
+        }
+    
+        button{
+            @include btn-ver-mas;
+        } 
+    }       
+}
+
+
+.slide_docente{
     animation-name: slideDocente;
     animation-duration: .6s;
     animation-fill-mode: forwards;
