--- a/components/asesorias/LeafsItem/LeafsItem.module.scss
+++ b/components/asesorias/LeafsItem/LeafsItem.module.scss
@@ -6,6 +6,7 @@
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
     @media screen and (max-width: 1024px){
         overflow: auto;
+        margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
     }
 
     .wrapper{
@@ -29,12 +30,7 @@
             cursor: pointer;
             transition: all .3s;
             transition-timing-function: ease-out;
-            @media screen and (max-width: 1024px){
-                position: relative;
-                width: 100%;
-                margin-bottom: calc(15px + (25 - 15) * ((100vw - 300px) / (1024 - 300)));
-                box-shadow: none;
-            }
+
             img{
                 width: 100%;
                 height: auto;
@@ -58,17 +54,11 @@
             }
             &:nth-of-type(2){
                 z-index: 3;
-                right: calc(278px + (708 - 278) * ((100vw - 1200px) / (3840 - 1200)));    
-                @media screen and (max-width: 1024px){
-                    right: 0;
-                }            
+                right: calc(278px + (708 - 278) * ((100vw - 1200px) / (3840 - 1200)));                
             }
             &:nth-of-type(3){
                 z-index: 2; 
-                right: calc(138px + (355 - 138) * ((100vw - 1200px) / (3840 - 1200)));  
-                @media screen and (max-width: 1024px){
-                    right: 0;
-                }           
+                right: calc(138px + (355 - 138) * ((100vw - 1200px) / (3840 - 1200)));            
             }
             &:nth-of-type(4){
                 z-index: 1; 
@@ -161,5 +151,21 @@
                 }
             }
         }
-    }    
+    }  
+    
+    .item_slide{
+        @include basic-card-1;
+        img{
+            margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(10px + (30 - 10) * ((100vw - 300px) / (1024 - 300)));
+            } 
+        }
+        p{
+            margin-bottom: calc(25px + (75 - 25) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(20px + (55 - 20) * ((100vw - 300px) / (1024 - 300)));
+            } 
+        }
+    }
 }
