--- a/pages/novedades/novedades.module.scss
+++ b/pages/novedades/novedades.module.scss
@@ -2,6 +2,9 @@
 
 .marquee{
     margin-bottom: calc(42px + (145 - 42) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+    }
 }
 
 
@@ -20,6 +23,9 @@
         0
         calc(75px + (235 - 75) * ((100vw - 1200px) / (3840 - 1200)))
         0;  
+        @media screen and (max-width: 1024px){
+            margin-bottom: calc(50px + (150 - 50) * ((100vw - 300px) / (1024 - 300)));
+        }
         .btn_filter{
             @include btn-ver-mas;
             border-color: $gray-2;
