--- a/pages/equipo/perfil.module.scss
+++ b/pages/equipo/perfil.module.scss
@@ -6,6 +6,11 @@
     grid-template-areas: 'left right';
     grid-template-columns: 50% 50%; 
     margin-bottom: calc(95px + (280 - 95) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        grid-template-areas: 'left';
+        grid-template-columns: 100%; 
+        margin-bottom: calc(50px + (175 - 50) * ((100vw - 300px) / (1024 - 300)));
+    }
 
     .col_left{
         grid-area: left; 
@@ -18,11 +23,17 @@
                 @include font-level-4;
                 color: $deep-blue;    
                 line-height: 105%;   
-                margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));                               
+                margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));          
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(25px + (80 - 25) * ((100vw - 300px) / (1024 - 300)));
+                }                     
                 img{
                     width: calc(12px + (28 - 12) * ((100vw - 1200px) / (3840 - 1200)));
                     height: auto;
                     margin-right: calc(10px + (26 - 10) * ((100vw - 1200px) / (3840 - 1200)));
+                    @media screen and (max-width: 1024px){
+                        width: calc(10px + (22 - 10) * ((100vw - 300px) / (1024 - 300)));
+                    }
                 }
                 strong{
                     font-weight: 400;
@@ -37,6 +48,9 @@
             color: $deep-blue;
             line-height: 115%;
             margin-bottom: calc(64px + (180 - 64) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(35px + (120 - 35) * ((100vw - 300px) / (1024 - 300)));
+            }
             span{
                 color: $gray-3;
             }
@@ -49,6 +63,9 @@
                 font-weight: 400;
                 line-height: 144%;
                 margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                }
             }
         }
     }
@@ -58,6 +75,9 @@
         display: flex;
         flex-direction: column;
         padding-top: calc(62px + (162 - 62) * ((100vw - 1200px) / (3840 - 1200)));
+        @media screen and (max-width: 1024px){
+            display: none;
+        }
 
         img{
             background-color: $green-2;
@@ -70,7 +90,10 @@
 }
 
 .producciones{
-    margin-bottom: calc(80px + (240 - 80) * ((100vw - 1200px) / (3840 - 1200))); 
+    margin-bottom: calc(80px + (240 - 80) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(35px + (135 - 35) * ((100vw - 300px) / (1024 - 300)));
+    } 
 
     h3{
         @include container-width-1;
@@ -87,7 +110,10 @@
         @include basic-card-2;
         width: calc(490px + (1340 - 490) * ((100vw - 1200px) / (3840 - 1200)));
         margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));          
-        padding-bottom: calc(15px + (30 - 15) * ((100vw - 1200px) / (3840 - 1200)));       
+        padding-bottom: calc(15px + (30 - 15) * ((100vw - 1200px) / (3840 - 1200)));    
+        @media screen and (max-width: 1024px){
+            width: calc(255px + (880 - 255) * ((100vw - 300px) / (1024 - 300)));
+        }   
     
         h5{        
             span{
