--- a/pages/producciones/produccion.module.scss
+++ b/pages/producciones/produccion.module.scss
@@ -2,8 +2,10 @@
 
 .marquee{
     margin-bottom: calc(42px + (145 - 42) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+    }
 }
-
 
 .pin_block {
     @include container-width-1;
@@ -11,11 +13,18 @@
     grid-template-areas: 'left right';
     grid-template-columns: 50% 50%; 
     margin-bottom: calc(120px + (420 - 120) * ((100vw - 1200px) / (3840 - 1200)));
-
+    @media screen and (max-width: 1024px){
+        grid-template-areas: 'left' 'right';
+        grid-template-columns: 100% 100%; 
+        margin-bottom: calc(50px + (175 - 50) * ((100vw - 300px) / (1024 - 300)));
+    }
 
     .col_left{
         grid-area: left;  
         padding-right: calc(100px + (290 - 100) * ((100vw - 1200px) / (3840 - 1200)));
+        @media screen and (max-width: 1024px){
+            padding-right: 0;
+        }
 
         .back_arrow{
             text-decoration: none;
@@ -25,11 +34,17 @@
                 @include font-level-4;
                 color: $deep-blue;    
                 line-height: 105%;   
-                margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));                               
+                margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));   
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(25px + (80 - 25) * ((100vw - 300px) / (1024 - 300)));
+                }                            
                 img{
                     width: calc(12px + (28 - 12) * ((100vw - 1200px) / (3840 - 1200)));
                     height: auto;
                     margin-right: calc(10px + (26 - 10) * ((100vw - 1200px) / (3840 - 1200)));
+                    @media screen and (max-width: 1024px){
+                        width: calc(10px + (22 - 10) * ((100vw - 300px) / (1024 - 300)));
+                    }
                 }
                 strong{
                     font-weight: 400;
@@ -43,6 +58,9 @@
             font-weight: 400;     
             color: $deep-blue;  
             margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200))); 
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(20px + (80 - 20) * ((100vw - 300px) / (1024 - 300)));
+            }
         }
 
         .authors{
@@ -51,6 +69,9 @@
             font-weight: 400;
             line-height: 144%;
             margin-bottom: calc(20px + (50 - 20) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300)));
+            }
             
             p{
                 margin: 0;
@@ -71,12 +92,18 @@
             list-style: none;
             padding: 0;            
             margin-bottom: calc(40px + (100 - 40) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(20px + (80 - 20) * ((100vw - 300px) / (1024 - 300)));
+            }
     
             li{
                 @include font-level-4;
                 color: $green-1;
                 display: inline-block;
-                margin-right: calc(12px + (60 - 12) * ((100vw - 1200px) / (3840 - 1200)));                
+                margin-right: calc(12px + (60 - 12) * ((100vw - 1200px) / (3840 - 1200)));  
+                @media screen and (max-width: 1024px){
+                    margin-right: calc(10px + (30 - 10) * ((100vw - 300px) / (1024 - 300))); 
+                }              
             }
         }  
         
@@ -122,12 +149,20 @@
         .content{
             padding-top: calc(38px + (60 - 38) * ((100vw - 1200px) / (3840 - 1200)));
             margin-bottom: calc(38px + (60 - 38) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                padding-top: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+                margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300))); 
+            }
             h3{
                 @include font-level-3;
                 color: $deep-blue;
                 font-weight: 500;
                 padding-top: calc(28px + (95 - 28) * ((100vw - 1200px) / (3840 - 1200)));
                 margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    padding-top: calc(22px + (82 - 22) * ((100vw - 300px) / (1024 - 300))); 
+                    margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                } 
             }
             p{
                 @include font-level-4;
@@ -135,15 +170,24 @@
                 font-weight: 400;
                 line-height: 144%;
                 margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                }
             }
         }
 
         .legal{
             background-color: $gray-6;
             padding: calc(22px + (80 - 22) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                padding: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300))); 
+            }
             
             .box{
                 margin-bottom: calc(22px + (70 - 22) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                }
                 &:last-of-type{
                     margin-bottom: 0;
                 }
