--- a/styles/themeStyles.module.scss
+++ b/styles/themeStyles.module.scss
@@ -47,9 +47,9 @@ $white: #FFFFFF;
 
 @mixin font-level-5 {
     font-size: calc(12px + (30 - 12) * ((100vw - 1200px) / (3840 - 1200)));
-    /* @media screen and (max-width: 1024px){
-        font-size: calc(17px + (38 - 17) * ((100vw - 300px) / (1024 - 300)));
-    } */
+    @media screen and (max-width: 1024px){
+        font-size: calc(10px + (28 - 10) * ((100vw - 300px) / (1024 - 300)));
+    }
 }
 
 
@@ -77,7 +77,6 @@ $line-2: calc(3px + (6 - 3) * ((100vw - 1200px) / (3840 - 1200)));
     display: inline-block;
     @include font-level-4;
     font-weight: 400;
-    line-height: 100%;
     text-decoration: none;    
     color: $deep-blue;    
     border: $line-1 solid $gray-3;
@@ -90,10 +89,10 @@ $line-2: calc(3px + (6 - 3) * ((100vw - 1200px) / (3840 - 1200)));
     cursor: pointer;
     @media screen and (max-width: 1024px){
         border: $line-1-mobile solid $gray-3;
-        padding:
-        calc(6px + (18 - 6) * ((100vw - 300px) / (1024 - 300)))
-        calc(9px + (24 - 9) * ((100vw - 300px) / (1024 - 300)))
-        ;
+        padding: 
+        calc(6px + (14 - 6) * ((100vw - 300px) / (1200 - 300)))
+        calc(12px + (36 - 12) * ((100vw - 300px) / (1200 - 300)))
+        ; 
     } 
     @media screen and (min-width: 1024px){
         &:hover{
