--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,9 @@
 {
     margin: 0;
     box-sizing: border-box;
-    text-size-adjust: 100%;
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
 }
 
 html, body, #__next {
