--- a/styles/swiperStyles.scss
+++ b/styles/swiperStyles.scss
@@ -136,6 +136,16 @@
   &.swiper-btns{
     padding: calc(5px + (10 - 5) * ((100vw - 1200px) / (3840 - 1200))) 0;
 
+    .swiper-wrapper{   
+      .swiper-slide {
+        @media screen and (max-width: 1024px){
+          &:first-of-type{
+            margin-left: calc(12px + (22 - 12) * ((100vw - 300px) / (1024 - 300)));            
+          }
+        }
+      }
+    }
+
     .swiper-button-prev, .swiper-button-next{
       position: absolute;
       background: rgb(255, 255, 255);   
@@ -146,8 +156,8 @@
       width: calc(156px + (256 - 156) * ((100vw - 1200px) / (3840 - 1200)));
       height: 100%;    
       color: transparent; 
-      @media screen and (max-width: 1024px){
-        width: calc(46px + (100 - 46) * ((100vw - 300px) / (1024 - 300)));
+      @media screen and (max-width: 1024px){        
+        width: calc(25px + (50 - 25) * ((100vw - 300px) / (1024 - 300)));
       }
       &::after{
         background-repeat: no-repeat;
@@ -165,9 +175,7 @@
         border: $line-1 solid $gray-3;
         transition: all .1s; 
         @media screen and (max-width: 1024px){
-          width: calc(21px + (46 - 21) * ((100vw - 300px) / (1024 - 300)));
-          height: calc(21px + (46 - 21) * ((100vw - 300px) / (1024 - 300))); 
-          font-size: calc(10px + (20 - 10) * ((100vw - 300px) / (1024 - 300)));
+          display: none;
         }
       }
       &.swiper-button-disabled{
@@ -193,6 +201,9 @@
       background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 28%, rgba(255, 255, 255, 0) 100%);
       left: 0;
       justify-content: left;   
+      @media screen and (max-width: 1024px){
+        display: none;
+      }
       &::after{
         background-image: url(../public/assets/icons/arrow_prev_icon.svg);
       } 
@@ -209,6 +220,9 @@
       background: linear-gradient(-90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 28%, rgba(255, 255, 255, 0) 100%);
       right: 0;
       justify-content: right;  
+      @media screen and (max-width: 1024px){
+        background: linear-gradient(-90deg, rgba(255, 255, 255, 1) 5%, rgba(255, 255, 255, 0) 100%);
+      }
       &::after{
         background-image: url(../public/assets/icons/arrow_next_icon.svg);
       }
