--- a/pages/producciones/producciones.module.scss
+++ b/pages/producciones/producciones.module.scss
@@ -6,3 +6,19 @@
         margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
     }
 }
+
+.productions_nav{
+    position: relative;
+    z-index: 20;
+    background-color: $white;
+    padding: 
+    calc(35px + (130 - 35) * ((100vw - 1200px) / (3840 - 1200)))
+    0
+    calc(10px + (20 - 10) * ((100vw - 1200px) / (3840 - 1200))) 
+    0
+    ;
+    margin-bottom: calc(65px + (214 - 65) * ((100vw - 1200px) / (3840 - 1200)));  
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(50px + (150 - 50) * ((100vw - 300px) / (1024 - 300)));
+    }
+}
