--- a/pages/novedades/[category]/title.module.scss
+++ b/pages/novedades/[category]/title.module.scss
@@ -1,88 +1,185 @@
 @import "../../../styles/themeStyles.module.scss";
 
-.twoColumns {
+.pin_block {
     @include container-width-1;
     display: grid;
-    grid-template-columns: 46% 46%;
-    grid-gap: 8%;
-    color: $deep-blue;
-    @include font-level-4;
-
-    h1{
-        font-weight: 400;
-        margin-bottom: 8%;
+    grid-template-areas: 'left right';
+    grid-template-columns: 50% 50%; 
+    margin-bottom: calc(120px + (420 - 120) * ((100vw - 1200px) / (3840 - 1200)));
+    @media screen and (max-width: 1024px){
+        grid-template-areas: 'left';
+        grid-template-columns: 100%; 
+        margin-bottom: calc(5px + (10 - 5) * ((100vw - 300px) / (1024 - 300)));
     }
-
-    h3, h4{
-        margin-bottom: 8%;
-    }
-
-    a{
-        color: $deep-blue;
-    }
-
-    p{
-        margin-bottom: 8%;
-    }
-
-    .arrowBack{
-        margin-bottom: 8%;
-        a{
-            border-bottom: 3px solid $yellow-1;
-            text-decoration: none;
-            @include font-level-4;
-        }
-    }
-
 
     .col_left{
-        .info{
-            margin-bottom: 8%;   
-    
-            .category{
-                display: inline-block;
-                margin-bottom: 0;
-                color: $green-1;
-            }
-    
-            .date{
-                color: #032E594D;
+        grid-area: left; 
+
+        .back_arrow{
+            text-decoration: none;
+            span{
+                display: flex;
+                align-items: center;    
+                @include font-level-4;
+                color: $deep-blue;    
+                line-height: 105%;   
+                margin-bottom: calc(36px + (80 - 36) * ((100vw - 1200px) / (3840 - 1200)));          
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(25px + (80 - 25) * ((100vw - 300px) / (1024 - 300)));
+                }                     
+                img{
+                    width: calc(12px + (28 - 12) * ((100vw - 1200px) / (3840 - 1200)));
+                    height: auto;
+                    margin-right: calc(10px + (26 - 10) * ((100vw - 1200px) / (3840 - 1200)));
+                    @media screen and (max-width: 1024px){
+                        width: calc(10px + (22 - 10) * ((100vw - 300px) / (1024 - 300)));
+                    }
+                }
+                strong{
+                    font-weight: 400;
+                    border-bottom: $line-2 solid $yellow-1; 
+                }                      
+            }                       
+        }
+
+        h1{
+            @include font-level-1; 
+            font-weight: 400;
+            color: $deep-blue;
+            line-height: 115%;
+            margin-bottom: calc(25px + (70 - 25) * ((100vw - 1200px) / (3840 - 1200))); 
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(20px + (80 - 20) * ((100vw - 300px) / (1024 - 300)));
             }
         }
-    }
 
-    .col_right{
-        .btnExploring{
-            a{
-                font-size: 15px;
+        p{
+            @include font-level-4;
+            color: $deep-blue;
+            font-weight: 400;
+            line-height: 144%;
+            margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
             }
-        }        
+            &.info{
+                color: $green-1;
+                margin-bottom: calc(42px + (132 - 42) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(25px + (100 - 25) * ((100vw - 300px) / (1024 - 300))); 
+                }
+                span{
+                    color: $gray-2;
+                }
+            }
+            a{
+                color: $deep-blue;
+            }
+        }
+
+        video{
+            width: 100%;
+            height: auto;
+            margin-bottom: calc(24px + (56 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(15px + (50 - 15) * ((100vw - 300px) / (1024 - 300))); 
+            }
+        }
+
+        .share_btn{
+            @include btn-ver-mas;
+            border-color: $deep-blue;
+            margin-bottom: calc(35px + (105 - 35) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                margin-bottom: calc(35px + (100 - 35) * ((100vw - 300px) / (1024 - 300))); 
+            }
+            @media screen and (min-width: 1024px){
+                &:hover{
+                    background-color: $deep-blue;
+                    border-color: $deep-blue;
+                    color: $white;
+                    &.download{
+                        span{
+                            img{
+                                filter: grayscale(100%) brightness(20);     
+                            }
+                        }                                
+                    }
+                }
+                &:active{
+                    filter: brightness(90%);
+                    transform: scale(0.95);
+                }
+            }            
+        }
+
+        .legal{
+            background-color: $gray-6;
+            padding: calc(22px + (80 - 22) * ((100vw - 1200px) / (3840 - 1200)));
+            @media screen and (max-width: 1024px){
+                padding: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                margin-bottom: calc(45px + (145 - 45) * ((100vw - 300px) / (1024 - 300))); 
+            }
+            
+            .box{
+                margin-bottom: calc(22px + (70 - 22) * ((100vw - 1200px) / (3840 - 1200)));
+                @media screen and (max-width: 1024px){
+                    margin-bottom: calc(15px + (45 - 15) * ((100vw - 300px) / (1024 - 300))); 
+                }
+                &:last-of-type{
+                    margin-bottom: 0;
+                }
+                h4{
+                    @include font-level-4;
+                    color: $deep-blue;
+                    font-weight: 500;
+                    margin-bottom: calc(14px + (46 - 24) * ((100vw - 1200px) / (3840 - 1200)));
+                }
+                p, a{
+                    @include font-level-5;
+                    color: $deep-blue;
+                    font-weight: 400;
+                    line-height: 144%;
+                    margin-bottom: calc(14px + (46 - 14) * ((100vw - 1200px) / (3840 - 1200)));   
+                    &:last-of-type{
+                        margin-bottom: 0;
+                    }                 
+                }
+            }
+        } 
+        
     }
-
-}
-
-.container{
-    @include container-width-1;
+    
+    .col_right{ 
+        h4{
+            @include font-level-4;
+            font-weight: 400;
+            color: $deep-blue;    
+            line-height: 105%;  
+            padding:
+            0
+            0
+            calc(35px + (110 - 35) * ((100vw - 1200px) / (3840 - 1200)))
+            calc(10px + (25 - 10) * ((100vw - 1200px) / (3840 - 1200)))
+            ;
+            @media screen and (max-width: 1024px){
+                padding:
+                0
+                0
+                calc(20px + (70 - 20) * ((100vw - 300px) / (1024 - 300)))
+                0
+                ;
+            }
+        }
+        @media screen and (min-width: 1025px){
+            padding-left: calc(100px + (350 - 100) * ((100vw - 1200px) / (3840 - 1200)));
+        }
+    }
 }
 
 .marquee{
     margin-bottom: calc(42px + (145 - 42) * ((100vw - 1200px) / (3840 - 1200)));
-}
-
-.btn_share{
-    @include btn-ver-mas;
-    border-color: $deep-blue;
-    margin-bottom: 8%;
-    @media screen and (min-width: 1024px){
-        &:hover{
-            background-color: $gray-6;
-            border-color: $gray-2;
-            color: $deep-blue;
-        }
-    }            
-}
-
-.licence{
-    @include basic-card-1;
-    margin-left: 0;
+    @media screen and (max-width: 1024px){
+        margin-bottom: calc(30px + (100 - 30) * ((100vw - 300px) / (1024 - 300)));
+    }
 }
