--- a/components/home/HomeHeading/HomeHeading.module.scss
+++ b/components/home/HomeHeading/HomeHeading.module.scss
@@ -27,23 +27,11 @@
             padding-bottom: calc(4px + (8 - 4) * ((100vw - 300px) / (1024 - 300)));
         }
     }
-    /* span{
-        position: relative; 
-        z-index: 2;         
-        &::before {              
-            background-color: #ffd658;
-            content: "";
-            position: absolute;
-            z-index: -1;
-            height: calc(6px + (18 - 6) * ((100vw - 1200px) / (3840 - 1200)));                       
-            width: 101%;
-            left: -0.5%;
-            right: 0;
-            bottom: calc(-2px + (-8 - -2) * ((100vw - 1200px) / (3840 - 1200)));
-            @media screen and (max-width: 1025px){ 
-                height: calc(4px + (15 - 4) * ((100vw - 300px) / (1024 - 300)));  
-                bottom: calc(-1px + (-8 - -1) * ((100vw - 300px) / (1024 - 300)));
-            } 
-        }
-    } */
+    br{
+        &.mobile{
+            @media screen and (min-width: 1024px){
+                display: none;
+            }            
+        } 
+    }
 }
